# aiswakepy

./: .dockerignore  .env.example  .gitignore  .gitmodules  2026-04-16-161957-local-command-caveatcaveat-the-messages-below.txt  AGENTS.md  CLAUDE.md  Dockerfile  FROUDE_NUMBERS.md  PLAN.md  PRD.md  README.md  analyze_ossi_highpass.ipynb  compare_empirical.py  config.json  dash_app.py  dash_rendering_spike.ipynb  data  docker-compose.local.yml  docker-compose.prod.yml  main.py  pyproject.toml  run_shipwake.ipynb  run_shipwake_record.ipynb  server_config.json  validate_pipeline.py
.github/workflows/: deploy.yml
aiswakepy/: _progress.py  config.py  pipeline.py
aiswakepy/comparison/: __init__.py  ossi.py  plots.py
aiswakepy/geo/: bathymetry.py  coastline.py  geodesy.py
aiswakepy/models/: __init__.py  bhowmik.py  blaauw.py  gates.py  kriebel.py  maynord.py  pianc.py  sorensen.py
assets/: animation_controller.js  custom.css  polygon_controller.js
docs/: DASH_RENDERING_SPIKE.md  DEPLOYMENT.md  MATLAB_REVIEW.md  PERFORMANCE.md  PERFORMANCE_PLAN.md  VIZ_DOWNSAMPLING.md
ref/: AIS_filter.py  WUHL_01_EmpiricalFormulations_AISdata_B_Le.m  WUHL_02_Comparison_AIS_OSSI_B_Le.m
scripts/: capture_map.py
spec/: SPEC.md
tests/: test_animation_controller.py  test_block_coeff.py  test_coastline.py  test_config.py  test_dash_upload_sessions.py  test_depth.py  test_filter.py  test_geodesy.py  test_imports.py  test_models.py  test_pipeline.py  test_point_impact.py  test_polygon_controller.py  test_shore_impact.py  test_viz.py  test_wave_params.py  validation_report.md
(+22 files in other folders)
