[project]
name = "aiswakepy"
version = "0.1.0"
description = "Ship-wake induced wave height calculation from AIS data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyproj>=3.6",
    "shapely>=2.0",
    "geopandas>=0.14",
    "fiona>=1.9",
    "mikeio>=2.0",
    "scipy>=1.11",
    "pydantic>=2.0",
    "matplotlib>=3.8",
    "contextily>=1.4",
    "pyarrow>=14.0",
    "ipywidgets>=8.1.8",
    "ipykernel>=7.2.0",
    "openpyxl>=3.1",
    "dash>=4.1.0",
    "plotly-resampler>=0.11.0",
    "datashader>=0.19.0",
    "dash-deck>=0.0.1",
    "pydeck>=0.9.2",
    "pytz>=2026.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyterlab>=4.0",
    "python-pptx>=1.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
